--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-theme: minima
+title: Minimal theme
+logo: /assets/img/logo.png
+description: Portfolio for Mike Bee apps.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-minimal
